objects/Territory_Assignment__c/Territory_Assignment__c.object-meta.xml
<CustomObject>
    <label>Territory Assignment</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>