objects/Territory_Assignment__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <label>Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alliance partner</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Consulting partner</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Former Customer</fullName>
            </value>
            <value>
                <fullName>Integrator</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>MSP partner</fullName>
            </value>
            <value>
                <fullName>OEM partner</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Protected</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Reseller (channel partner VAR, LAR, etc)</fullName>
            </value>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>