objects/Territory_Assignment__c/fields/Area_VP__c.field-meta.xml
<CustomField>
    <fullName>Area_VP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Area VP will be automatically populated based on the Field Sales selection. Manual updates will be overwritten.</inlineHelpText>
    <label>Area VP</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Territory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>