objects/Territory_Assignment__c/fields/Field_Sales__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Name of the field sales person associated to this region. A field sales person could be a DSA, AM, CAE, GAM, etc.</inlineHelpText>
    <label>Field Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Region_Assignees</relationshipName>
    <type>Lookup</type>
</CustomField>