objects/Territory_Assignment__c/fields/Field_Sales_Title__c.field-meta.xml
<CustomField>
    <fullName>Field_Sales_Title__c</fullName>
    <formula>Field_Sales__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Field Sales Title</label>
    <type>Text</type>
</CustomField>