objects/Territory_Assignment__c/fields/HQ_Country__c.field-meta.xml
<CustomField>
    <fullName>HQ_Country__c</fullName>
    <label>HQ Country</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brazil</fullName>
            </value>
            <value>
                <fullName>Mexico</fullName>
            </value>
            <value>
                <fullName>Colombia</fullName>
            </value>
            <value>
                <fullName>Argentina</fullName>
            </value>
            <value>
                <fullName>Peru</fullName>
            </value>
            <value>
                <fullName>Venezuela, Bolivarian Republic of</fullName>
            </value>
            <value>
                <fullName>Chile</fullName>
            </value>
            <value>
                <fullName>Guatemala</fullName>
            </value>
            <value>
                <fullName>Ecuador</fullName>
            </value>
            <value>
                <fullName>Bolivia, Plurinational State of</fullName>
            </value>
            <value>
                <fullName>Haiti</fullName>
            </value>
            <value>
                <fullName>Cuba</fullName>
            </value>
            <value>
                <fullName>Dominican Republic</fullName>
            </value>
            <value>
                <fullName>Honduras</fullName>
            </value>
            <value>
                <fullName>Paraguay</fullName>
            </value>
            <value>
                <fullName>Nicaragua</fullName>
            </value>
            <value>
                <fullName>El Salvador</fullName>
            </value>
            <value>
                <fullName>Costa Rica</fullName>
            </value>
            <value>
                <fullName>Panama</fullName>
            </value>
            <value>
                <fullName>Uruguay</fullName>
            </value>
            <value>
                <fullName>Jamaica</fullName>
            </value>
            <value>
                <fullName>Trinidad and Tobago</fullName>
            </value>
            <value>
                <fullName>Guyana</fullName>
            </value>
            <value>
                <fullName>Suriname</fullName>
            </value>
            <value>
                <fullName>Belize</fullName>
            </value>
            <value>
                <fullName>Bahamas</fullName>
            </value>
            <value>
                <fullName>Barbados</fullName>
            </value>
            <value>
                <fullName>Saint Lucia</fullName>
            </value>
            <value>
                <fullName>Grenada</fullName>
            </value>
            <value>
                <fullName>Saint Vincent and the Grenadines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>