objects/Territory_Assignment__c/fields/Level_3_Sub_Area__c.field-meta.xml
<CustomField>
    <fullName>Level_3_Sub_Area__c</fullName>
    <formula>Field_Sales__r.Level_3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Level 3 will be automatically updated based on the Field Sales person&apos;s assignment in the sales role hierarchy</inlineHelpText>
    <label>Level 3 (Sub-Area)</label>
    <type>Text</type>
</CustomField>