objects/Territory_Assignment__c/fields/Searchable_Text__c.field-meta.xml
<CustomField>
    <fullName>Searchable_Text__c</fullName>
    <description>Concatenates all of the lookup value and formula into one field so that records are searchable from a list view</description>
    <label>Searchable Text</label>
    <type>TextArea</type>
</CustomField>