objects/Territory_Assignment__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>Focus</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Emerging Enterprise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>