objects/Territory_Assignment__c/fields/TSE__c.field-meta.xml
<CustomField>
    <fullName>TSE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the TSE supporting this Field Sales person</inlineHelpText>
    <label>TSE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Region_Assignees3</relationshipName>
    <type>Lookup</type>
</CustomField>