objects/Territory_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level_4_Region__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Area_VP__c</columns>
    <columns>Field_Sales__c</columns>
    <columns>Industry__c</columns>
    <columns>Segment__c</columns>
    <columns>HQ_Country__c</columns>
    <columns>SDR__c</columns>
    <columns>SDR_Manager__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>